<resources>
    <string name="app_name">PocketProfit</string>
    <string name="menu_description">Menu Button</string>
    <string name="search_description">Search Button</string>
    <string name="back_description">Back Button</string>
    <string name="watchlist_description">Watchlist Button</string>
    <string name="value_placeholder">$0.00</string>
    <string name="name_placeholder">-</string>
    <string name="symbol_placeholder">-</string>
    <string name="percent_change_placeholder">$0.00 (0.00%)</string>
    <string name="today">Today</string>
    <string name="first_option">1D</string>
    <string name="second_option">5D</string>
    <string name="third_option">1M</string>
    <string name="fourth_option">6M</string>
    <string name="fifth_option">1Y</string>
    <string name="sixth_option">5Y</string>
    <string name="buy_action">Buy</string>
    <string name="sell_action">Sell</string>
    <string name="search_hint">Search for companies or symbols…</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="place_trade">Execute Trade</string>
    <string name="free_stock_text">Fill up the Free Stock Meter by watching rewarded video ads to receive a random free stock!</string>
    <string name="no_news">No News Available.</string>
    <string name="no_transactions">No Transaction History Available.</string>
    <string name="no_data">No Data Available.</string>
    <string name="reset_portfolio">Reset Portfolio</string>
    <string name="your_position">Your Position</string>
    <string name="your_portfolio">Your Portfolio</string>
    <string name="stats">Stats</string>
    <string name="about">About</string>
    <string name="company_description">Company Description</string>
    <string name="stocks">Stocks</string>
    <string name="watchlist">Watchlist</string>
    <string name="claim_stock">Claim Free Stock</string>
    <string name="display_ad">Display Ad</string>
    <string name="total_cost">Total Cost</string>
    <string name="share_price">Share Price</string>
    <string name="top_losers">Top Losers</string>
    <string name="top_gainers">Top Gainers</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="reset_confirmation">Are you sure that you want to reset your portfolio? This process cannot be undone.</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="market_closed">Market Closed!</string>
    <string name="market_closed_text">Transactions cannot be made at this time as the stock market is currently closed.</string>
    <string name="view_hours">View Hours</string>
    <string name="congratulations">Congratulations!</string>

    <string name="test_banner_ad">-</string>
    <string name='test_interstitial_ad'>-</string>

    <string name="account_statement_banner_ad">-</string>
    <string name="homepage_banner_ad">-</string>
    <string name="homepage_interstitial_ad">-</string>
    <string name="news_banner_ad">-</string>
    <string name="search_banner_ad">-</string>
    <string name="stockchart_banner_ad">-</string>
    <string name="stockchart_interstitial_ad">-</string>
    <string name="top_movers_banner_ad">-</string>
    <string name="transaction_banner_ad">-</string>
    <string name="transaction_history_banner_ad">-</string>
    <string name="sector_list">-</string>
    <string name="sector_information">-</string>
    <string name="free_stock_reward_ad">-</string>
</resources>