<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".source.activities.StockTransactionActivity">

    <include
        android:id="@+id/transaction_toolbar"
        layout="@layout/enhanced_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vMargin"
        android:layout_below="@+id/transaction_toolbar"
        android:layout_above="@+id/execute_trade"
        android:orientation="vertical">
        
        <RelativeLayout
            android:layout_marginBottom="@dimen/vMargin"
            android:paddingBottom="10dp"
            android:background="@drawable/underline_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/shares"
                android:textSize="22dp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/share_text"
                android:textSize="18dp"
                android:textColor="@color/gray"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginBottom="@dimen/vMargin"
            android:paddingBottom="10dp"
            android:background="@drawable/underline_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/share_price"
                android:textSize="22dp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/share_price"
                android:textSize="18dp"
                android:textColor="@color/gray"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:background="@drawable/underline_gray"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/total"
                android:textSize="22dp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/total_cost"
                android:textSize="18dp"
                android:textColor="@color/gray"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        
        
    </LinearLayout>

    
    <Button
        android:id="@+id/execute_trade"
        android:text="@string/place_trade"
        android:textStyle="bold"
        android:layout_above="@+id/number_pad"
        android:background="@drawable/rounded_green_button"
        android:layout_marginLeft="@dimen/vMargin"
        android:layout_marginRight="@dimen/vMargin"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <GridLayout
        android:id="@+id/number_pad"
        android:layout_above="@+id/ad_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="4"
        android:layout_margin="5dp">
        <Button
            android:id="@+id/one"
            android:text="@string/one"
            style="@style/NumberButton" />
        <Button
            android:id="@+id/two"
            android:text="@string/two"
            style="@style/NumberButton" />
        <Button
            android:id="@+id/three"
            android:text="@string/three"
            android:layout_column="2"
            android:layout_row="0"
            style="@style/NumberButton" />
        <Button
            android:id="@+id/four"
            android:text="@string/four"
            style="@style/NumberButton" />
        <Button
            android:id="@+id/five"
            android:text="@string/five"
            style="@style/NumberButton" />
        <Button
            android:id="@+id/six"
            android:text="@string/six"
            style="@style/NumberButton"/>
        <Button
            android:id="@+id/seven"
            android:text="@string/seven"
            style="@style/NumberButton" />
        <Button
            android:id="@+id/eight"
            android:text="@string/eight"
            style="@style/NumberButton" />
        <Button
            android:id="@+id/nine"
            android:text="@string/nine"
            style="@style/NumberButton" />
        <Button
            android:id="@+id/clear"
            style="@style/NumberButton" />
        <Button
            android:id="@+id/zero"
            android:text="@string/zero"
            style="@style/NumberButton" />
        <ImageView
            android:id="@+id/backspace"
            style="@style/NumberButton"
            android:src="@drawable/ic_backspace" />
    </GridLayout>

    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/view_konfetti"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/ad_container"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="50dp">
        <com.google.android.gms.ads.AdView
            android:id="@+id/ad_view"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/transaction_banner_ad">
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>
</RelativeLayout>