<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/back_description"
            android:layout_alignParentLeft="true" />
        <TextView
            android:id="@+id/symbol"
            android:text="@string/symbol_placeholder"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"/>
        <ViewFlipper
            android:id="@+id/watchlist_flipper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:inAnimation="@android:anim/slide_in_left"
            android:outAnimation="@android:anim/slide_out_right">
            <ImageView
                android:id="@+id/watchlist_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/watchlist_description"
                android:src="@drawable/ic_watchlist" />
            <ImageView
                android:id="@+id/watchlist_checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_checked"/>
        </ViewFlipper>

    </RelativeLayout>

</androidx.appcompat.widget.Toolbar>